# libkorutin

./: .gitignore  CMakeLists.txt  README.md  license
android/: build.gradle
android/app/: build.gradle
android/app/src/cpp/: main.c
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
examples/: benchmark.c  benchmark.h  test.c
includes/: libkorutin.h
ios/libkorutin/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ios/libkorutin.xcodeproj/: project.pbxproj
ios/libkorutin/Base.lproj/: Main.storyboard
src/: backend.h  debug.c  debug.h  libkorutin.c  scheduling.c  scheduling.h
src/backends/context/: context_backend.c  jump_ios.S  make_ios.S
src/backends/emscripten/: emscripten_backend.c
src/backends/switch/: switch_backend.c
src/backends/threads/: threads_backend.c
